--- a/desafio/pom.xml
+++ b/desafio/pom.xml
@@ -105,6 +105,14 @@
 			<artifactId>opencsv</artifactId>
 			<version>3.8</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		    <scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<!-- Package as an executable jar -->
