--- a/pdfreader/pom.xml
+++ b/pdfreader/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>br.com.intuitivecare</groupId>
-  <artifactId>desafio</artifactId>
-  <version>1.0</version>
-  <name>intuitivecare-desafio</name>
-  <description>desafio do processo de seleção para empresa intuitivecare</description>
+  <groupId>br.com.pdf.test</groupId>
+  <artifactId>pdfreader</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <name>pdfreader</name>
+  <description>tasda</description>
   
-  <properties>
+   <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
@@ -118,6 +118,12 @@
 		    <scope>test</scope>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-text</artifactId>
+		    <version>1.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<!-- Package as an executable jar -->
