--- a/desafio/src/main/resources/application.properties
+++ b/desafio/src/main/resources/application.properties
@@ -4,5 +4,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 
+link.site.ans=http://www.ans.gov.br/prestadores/tiss-troca-de-informacao-de-saude-suplementar
+nome.arquivo.pdf=arquivo - padrao_tiss_componente_organizacional_201902.pdf
+indice.tabela.pdf.categoriapadrao=30
+
 zip.filename=quadro31.zip
 csv.filename=quadro31.csv
