--- a/desafio/pom.xml
+++ b/desafio/pom.xml
@@ -118,6 +118,11 @@
 		    <scope>test</scope>
 		</dependency>
 		
+		<dependency>
+		    <groupId>net.sourceforge.htmlunit</groupId>
+		    <artifactId>htmlunit</artifactId>
+		    <version>2.35.0</version>
+		</dependency>
 	</dependencies>
 
 	<!-- Package as an executable jar -->
